# decibel-sih

./: .gitignore  README.md
ALM_CODE_V2/:  modeldesign.ipynb  audioprocessing.py
SIH25242_56080/: DATASETLINK.txt
SIH25242_56080/backend/: Lab.py
SIH25242_56080/backend/app/: config.py  experts_qna.py  forensics.py  main.py  utils.py
SIH25242_56080/frontend/: package-lock.json  package.json
SIH25242_56080/frontend/app/: page.tsx
SIH25242_56080/frontend/components/: analysis-content.tsx  chat-content.tsx  results-detail-content.tsx  results-list-content.tsx  upload-content.tsx
SIH25242_56080/frontend/contexts/: auth-context.tsx
SIH25242_56080/frontend/hooks/: use-wavesurfer.ts
SIH25242_56080/frontend/lib/: audio-data-parser.ts  auth.ts
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  experts_deepfake.py  experts_emotion.py  experts_qna.py  experts_scene.py  experts_vad_diarization.py  forensics.py  main.py
backend/db/: readme.md
dataset/: llm.py  test.ipynb
frontend/: dev.db  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
frontend/app/: globals.css  layout.tsx
frontend/app/analysis/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dataset/: page.tsx
frontend/components/: dashboard-content.tsx  decibel-logo.tsx  floating-navbar.tsx  footer.tsx  processing-content.tsx  rolling-quotes.tsx  settings-content.tsx  upload-confirm-content.tsx  workspace-content.tsx
frontend/contexts/: audio-store.tsx
frontend/lib/: db.ts  mock-data.ts  sample-audio-data.ts
frontend/prisma/: dev.db  schema.prisma
models/fgb/: fgb.py
(+40 files in other folders)
