[project]
name = "alm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "aiohttp>=3.13.3",
    "datasets>=4.4.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "lhotse>=1.32.1",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "nemo-toolkit>=2.2.1",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pyarrow>=22.0.0",
    "pytorch-lightning>=2.6.0",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "wandb>=0.23.1",
]
